crates/stef-parser/tests/snapshots/parser__error@alias_name.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap_err()"
input_file: crates/stef-parser/tests/inputs/invalid/alias_name.stef
---
stef::parse::alias_def (https://docs.rs/stef-parser/0.1.0/stef_parser/error/struct.ParseAliasError.html)

  × Failed to parse type alias declaration
  ╰─▶ Invalid alias name
   ╭────
 1 │ type sImple = Simple;
   ·      ▲
   ·      ╰── In this declaration
   ╰────
  help: Expected type alias declaration in the form `❬B❭type <Alias> = <Type>;❬B❭`

Error: stef::parse::alias_def::invalid_name (https://docs.rs/stef-parser/0.1.0/stef_parser/error/enum.ParseAliasCause.html#variant.InvalidName)

  × Invalid alias name
   ╭────
 1 │ type sImple = Simple;
   ·      ▲
   ·      ╰── Problematic character
   ╰────
  help: Alias names must start with an uppercase letter (❬Y❭A-Z❬Y❭), followed by zero or more alphanumeric
        characters (❬Y❭A-Z, a-z, 0-9❬Y❭)

