crates/stef-parser/tests/snapshots/parser__parse@alias-basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/alias-basic.stef
---
Schema {
    definitions: [
        TypeAlias(
            TypeAlias {
                comment: Comment(
                    [
                        "Sample type alias.",
                    ],
                ),
                alias: External(
                    ExternalType {
                        path: [],
                        name: "Sample",
                        generics: [],
                    },
                ),
                target: U32,
            },
        ),
    ],
}
