crates/stef-parser/tests/snapshots/parser__parse@alias_basic.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "/// Sample type alias.\ntype Sample = u32;"
input_file: crates/stef-parser/tests/inputs/alias_basic.stef
---
Schema {
    path: Some(
        "alias_basic.stef",
    ),
    source: "/// Sample type alias.\ntype Sample = u32;\n",
    definitions: [
        TypeAlias(
            TypeAlias {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Sample type alias.",
                            span: Span {
                                start: 0,
                                end: 22,
                            },
                        },
                    ],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 28,
                        end: 34,
                    },
                },
                generics: Generics(
                    [],
                ),
                target: Type {
                    value: U32,
                    span: Span {
                        start: 37,
                        end: 40,
                    },
                },
            },
        ),
    ],
}
