crates/stef-parser/tests/snapshots/parser__parse@attribute-multi.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/attribute-multi.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "validate",
                            value: Multi(
                                [
                                    Attribute {
                                        name: "min",
                                        value: Single(
                                            Int(
                                                1,
                                            ),
                                        ),
                                    },
                                    Attribute {
                                        name: "max",
                                        value: Single(
                                            Int(
                                                100,
                                            ),
                                        ),
                                    },
                                ],
                            ),
                        },
                    ],
                ),
                name: "Sample",
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
