crates/stef-parser/tests/snapshots/parser__parse@attribute-single.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/attribute-single.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "deprecated",
                            value: Single(
                                String(
                                    "don't use",
                                ),
                            ),
                        },
                    ],
                ),
                name: "Sample",
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
