crates/stef-parser/tests/snapshots/parser__parse@attribute-unit.stef.snap
---
source: crates/stef-parser/tests/parser.rs
expression: "Schema :: parse(input.as_str()).unwrap()"
input_file: crates/stef-parser/tests/inputs/attribute-unit.stef
---
Schema {
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "deprecated",
                            value: Unit,
                        },
                    ],
                ),
                name: "Sample",
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
