crates/stef-parser/tests/snapshots/parser__parse@attribute_single.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "#[deprecated = \"don't use\"]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attribute_single.stef
---
Schema {
    path: Some(
        "attribute_single.stef",
    ),
    source: "#[deprecated = \"don't use\"]\nstruct Sample\n",
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "deprecated",
                            value: Single(
                                Literal {
                                    value: String(
                                        "don't use",
                                    ),
                                    span: Span {
                                        start: 15,
                                        end: 26,
                                    },
                                },
                            ),
                        },
                    ],
                ),
                name: Name {
                    value: "Sample",
                    span: Span {
                        start: 35,
                        end: 41,
                    },
                },
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
