crates/stef-parser/tests/snapshots/parser__parse@attribute_unit.stef.snap
---
source: crates/stef-parser/tests/parser.rs
description: "#[deprecated]\nstruct Sample"
input_file: crates/stef-parser/tests/inputs/attribute_unit.stef
---
Schema {
    path: Some(
        "attribute_unit.stef",
    ),
    source: "#[deprecated]\nstruct Sample\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [
                        Attribute {
                            name: "deprecated",
                            value: Unit,
                        },
                    ],
                ),
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                fields: Unit,
            },
        ),
    ],
}
